crates/cli/tests/snapshots/snapshot_tests__sarif_unused_dev_deps_only.snap
---
source: crates/cli/tests/snapshot_tests.rs
expression: redact_sarif_version(&json_str)
---
{
  "$schema": "https://json.schemastore.org/sarif-2.1.0.json",
  "version": "2.1.0",
  "runs": [
    {
      "tool": {
        "driver": {
          "name": "plow",
          "version": "[VERSION]",
          "informationUri": "https://github.com/plow-rs/plow",
          "rules": [
            {
              "id": "plow/unused-file",
              "shortDescription": {
                "text": "File is not reachable from any entry point"
              },
              "fullDescription": {
                "text": "Source files that are not imported by any other module and are not entry points (scripts, tests, configs). These files can safely be deleted. Detection uses graph reachability from configured entry points."
              },
              "helpUri": "https://docs.genesis-plow.dev/explanations/dead-code#unused-files",
              "defaultConfiguration": {
                "level": "error"
              }
            },
            {
              "id": "plow/unused-export",
              "shortDescription": {
                "text": "Export is never imported"
              },
              "fullDescription": {
                "text": "Named exports that are never imported by any other module in the project. Includes both direct exports and re-exports through barrel files. The export may still be used locally within the same file."
              },
              "helpUri": "https://docs.genesis-plow.dev/explanations/dead-code#unused-exports",
              "defaultConfiguration": {
                "level": "error"
              }
            },
            {
              "id": "plow/unused-type",
              "shortDescription": {
                "text": "Type export is never imported"
              },
              "fullDescription": {
                "text": "Type-only exports (interfaces, type aliases, enums used only as types) that are never imported. These do not generate runtime code but add maintenance burden."
              },
              "helpUri": "https://docs.genesis-plow.dev/explanations/dead-code#unused-types",
              "defaultConfiguration": {
                "level": "error"
              }
            },
            {
              "id": "plow/private-type-leak",
              "shortDescription": {
                "text": "Exported signature references a private type"
              },
              "fullDescription": {
                "text": "Exported values or types whose public TypeScript signature references a same-file type declaration that is not exported. Consumers cannot name that private type directly, so the backing type should be exported or removed from the public signature."
              },
              "helpUri": "https://docs.genesis-plow.dev/explanations/dead-code#private-type-leaks",
              "defaultConfiguration": {
                "level": "none"
              }
            },
            {
              "id": "plow/unused-dependency",
              "shortDescription": {
                "text": "Dependency listed but never imported"
              },
              "fullDescription": {
                "text": "Packages listed in dependencies that are never imported or required by any source file. Framework plugins and CLI tools may be false positives; use the ignore_dependencies config to suppress."
              },
              "helpUri": "https://docs.genesis-plow.dev/explanations/dead-code#unused-dependencies",
              "defaultConfiguration": {
                "level": "error"
              }
            },
            {
              "id": "plow/unused-dev-dependency",
              "shortDescription": {
                "text": "Dev dependency listed but never imported"
              },
              "fullDescription": {
                "text": "Packages listed in devDependencies that are never imported by test files, config files, or scripts. Build tools and jest presets that are referenced only in config may appear as false positives."
              },
              "helpUri": "https://docs.genesis-plow.dev/explanations/dead-code#unused-devdependencies",
              "defaultConfiguration": {
                "level": "warning"
              }
            },
            {
              "id": "plow/unused-optional-dependency",
              "shortDescription": {
                "text": "Optional dependency listed but never imported"
              },
              "fullDescription": {
                "text": "Packages listed in optionalDependencies that are never imported. Optional dependencies are typically platform-specific; verify they are not needed on any supported platform before removing."
              },
              "helpUri": "https://docs.genesis-plow.dev/explanations/dead-code#unused-optionaldependencies",
              "defaultConfiguration": {
                "level": "warning"
              }
            },
            {
              "id": "plow/type-only-dependency",
              "shortDescription": {
                "text": "Production dependency only used via type-only imports"
              },
              "fullDescription": {
                "text": "Production dependencies that are only imported via `import type` statements. These can be moved to devDependencies since they generate no runtime code and are stripped during compilation."
              },
              "helpUri": "https://docs.genesis-plow.dev/explanations/dead-code#type-only-dependencies",
              "defaultConfiguration": {
                "level": "warning"
              }
            },
            {
              "id": "plow/test-only-dependency",
              "shortDescription": {
                "text": "Production dependency only imported by test files"
              },
              "fullDescription": {
                "text": "Production dependencies that are only imported from test files. These can usually move to devDependencies because production entry points do not require them at runtime."
              },
              "helpUri": "https://docs.genesis-plow.dev/explanations/dead-code#test-only-dependencies",
              "defaultConfiguration": {
                "level": "warning"
              }
            },
            {
              "id": "plow/unused-enum-member",
              "shortDescription": {
                "text": "Enum member is never referenced"
              },
              "fullDescription": {
                "text": "Enum members that are never referenced in the codebase. Uses scope-aware binding analysis to track all references including computed access patterns."
              },
              "helpUri": "https://docs.genesis-plow.dev/explanations/dead-code#unused-enum-members",
              "defaultConfiguration": {
                "level": "error"
              }
            },
            {
              "id": "plow/unused-class-member",
              "shortDescription": {
                "text": "Class member is never referenced"
              },
              "fullDescription": {
                "text": "Class methods and properties that are never referenced outside the class. Private members are checked within the class scope; public members are checked project-wide."
              },
              "helpUri": "https://docs.genesis-plow.dev/explanations/dead-code#unused-class-members",
              "defaultConfiguration": {
                "level": "error"
              }
            },
            {
              "id": "plow/unresolved-import",
              "shortDescription": {
                "text": "Import could not be resolved"
              },
              "fullDescription": {
                "text": "Import specifiers that could not be resolved to a file on disk. Common causes: deleted files, typos in paths, missing path aliases in tsconfig, or uninstalled packages."
              },
              "helpUri": "https://docs.genesis-plow.dev/explanations/dead-code#unresolved-imports",
              "defaultConfiguration": {
                "level": "error"
              }
            },
            {
              "id": "plow/unlisted-dependency",
              "shortDescription": {
                "text": "Dependency used but not in package.json"
              },
              "fullDescription": {
                "text": "Packages that are imported in source code but not listed in package.json. These work by accident (hoisted from another workspace package or transitive dep) and will break in strict package managers."
              },
              "helpUri": "https://docs.genesis-plow.dev/explanations/dead-code#unlisted-dependencies",
              "defaultConfiguration": {
                "level": "error"
              }
            },
            {
              "id": "plow/duplicate-export",
              "shortDescription": {
                "text": "Export name appears in multiple modules"
              },
              "fullDescription": {
                "text": "The same export name is defined in multiple modules. Consumers may import from the wrong module, leading to subtle bugs. Consider renaming or consolidating."
              },
              "helpUri": "https://docs.genesis-plow.dev/explanations/dead-code#duplicate-exports",
              "defaultConfiguration": {
                "level": "error"
              }
            },
            {
              "id": "plow/circular-dependency",
              "shortDescription": {
                "text": "Circular dependency chain detected"
              },
              "fullDescription": {
                "text": "A cycle in the module import graph. Circular dependencies cause undefined behavior with CommonJS (partial modules) and initialization ordering issues with ESM. Break cycles by extracting shared code."
              },
              "helpUri": "https://docs.genesis-plow.dev/explanations/dead-code#circular-dependencies",
              "defaultConfiguration": {
                "level": "error"
              }
            },
            {
              "id": "plow/re-export-cycle",
              "shortDescription": {
                "text": "Two or more barrel files re-export from each other in a loop"
              },
              "fullDescription": {
                "text": "A barrel file re-exports from another barrel that ultimately re-exports back. When this happens, imports from any file in the loop may silently come up empty, because the re-export chain has no terminating module to resolve names against. To fix this: open any one file in the loop and remove the `export * from` (or `export { ... } from`) statement that points back into the cycle. Any single removal will break the cycle and restore working re-exports. A self-loop (a single barrel re-exporting from itself, often a rename leftover) is reported under the same rule with kind `self-loop`."
              },
              "helpUri": "https://docs.genesis-plow.dev/explanations/dead-code#re-export-cycles",
              "defaultConfiguration": {
                "level": "warning"
              }
            },
            {
              "id": "plow/boundary-violation",
              "shortDescription": {
                "text": "Import crosses a configured architecture boundary"
              },
              "fullDescription": {
                "text": "A module imports from a zone that its configured boundary rules do not allow. Boundary checks help keep layered architecture, feature slices, and package ownership rules enforceable."
              },
              "helpUri": "https://docs.genesis-plow.dev/explanations/dead-code#boundary-violations",
              "defaultConfiguration": {
                "level": "error"
              }
            },
            {
              "id": "plow/stale-suppression",
              "shortDescription": {
                "text": "Suppression comment or tag no longer matches any issue"
              },
              "fullDescription": {
                "text": "A plow-ignore-next-line, plow-ignore-file, or @expected-unused suppression that no longer matches any active issue. The underlying problem was fixed but the suppression was left behind. Remove it to keep the codebase clean."
              },
              "helpUri": "https://docs.genesis-plow.dev/explanations/dead-code#stale-suppressions",
              "defaultConfiguration": {
                "level": "warning"
              }
            },
            {
              "id": "plow/unused-catalog-entry",
              "shortDescription": {
                "text": "Catalog entry in pnpm-workspace.yaml not referenced by any workspace package"
              },
              "fullDescription": {
                "text": "An entry in the `catalog:` or `catalogs:` section of pnpm-workspace.yaml that no workspace package.json references via the `catalog:` protocol. Catalog entries are leftover dependency metadata once a package is removed from every consumer; delete the entry to keep the catalog truthful. See also: plow/unresolved-catalog-reference (the inverse: consumer references a catalog that does not declare the package)."
              },
              "helpUri": "https://docs.genesis-plow.dev/explanations/dead-code#unused-catalog-entries",
              "defaultConfiguration": {
                "level": "warning"
              }
            },
            {
              "id": "plow/empty-catalog-group",
              "shortDescription": {
                "text": "Named catalog group in pnpm-workspace.yaml has no entries"
              },
              "fullDescription": {
                "text": "A named group under `catalogs:` in pnpm-workspace.yaml has no package entries. Empty named groups are leftover catalog structure after the last entry is removed. The top-level `catalog:` map is intentionally ignored because some projects keep it as a stable hook."
              },
              "helpUri": "https://docs.genesis-plow.dev/explanations/dead-code#empty-catalog-groups",
              "defaultConfiguration": {
                "level": "warning"
              }
            },
            {
              "id": "plow/unresolved-catalog-reference",
              "shortDescription": {
                "text": "package.json references a catalog that does not declare the package"
              },
              "fullDescription": {
                "text": "A workspace package.json declares a dependency with the `catalog:` or `catalog:<name>` protocol, but the catalog has no entry for that package. `pnpm install` will fail with ERR_PNPM_CATALOG_ENTRY_NOT_FOUND_FOR_CATALOG_PROTOCOL. To fix: add the package to the named catalog, switch the reference to a different catalog that does declare it, or remove the reference and pin a hardcoded version. Scope: the detector scans `dependencies`, `devDependencies`, `peerDependencies`, and `optionalDependencies` in every workspace `package.json`. See also: plow/unused-catalog-entry (the inverse: catalog entries no consumer references)."
              },
              "helpUri": "https://docs.genesis-plow.dev/explanations/dead-code#unresolved-catalog-references",
              "defaultConfiguration": {
                "level": "error"
              }
            },
            {
              "id": "plow/unused-dependency-override",
              "shortDescription": {
                "text": "pnpm.overrides entry targets a package not declared or resolved"
              },
              "fullDescription": {
                "text": "An entry in `pnpm-workspace.yaml`'s `overrides:` section, or the root `package.json`'s `pnpm.overrides` block, whose target package is not declared by any workspace package and is not present in `pnpm-lock.yaml`. Override entries linger after their target package leaves the resolved dependency tree. For projects without a readable lockfile, plow falls back to workspace package.json manifests and keeps a `hint` so transitive CVE pins can be reviewed before removal. To fix: delete the entry, refresh `pnpm-lock.yaml` if it is stale, or add the entry to `ignoreDependencyOverrides` when the override is intentionally retained. See also: plow/misconfigured-dependency-override."
              },
              "helpUri": "https://docs.genesis-plow.dev/explanations/dead-code#unused-dependency-overrides",
              "defaultConfiguration": {
                "level": "warning"
              }
            },
            {
              "id": "plow/misconfigured-dependency-override",
              "shortDescription": {
                "text": "pnpm.overrides entry has an unparsable key or value"
              },
              "fullDescription": {
                "text": "An entry in `pnpm-workspace.yaml`'s `overrides:` or `package.json`'s `pnpm.overrides` whose key or value does not parse as a valid pnpm override spec. Common shapes: empty key, empty value, malformed version selector on the target (`@types/react@<<18`), unbalanced parent matcher (`react>`), or unsupported `npm:alias@` syntax in the version (only the `-`, `$ref`, and `npm:alias` pnpm idioms are allowed). pnpm rejects the workspace at install time with a parser error. To fix: correct the key/value shape, or remove the entry. See also: plow/unused-dependency-override."
              },
              "helpUri": "https://docs.genesis-plow.dev/explanations/dead-code#misconfigured-dependency-overrides",
              "defaultConfiguration": {
                "level": "error"
              }
            }
          ]
        }
      },
      "results": [
        {
          "ruleId": "plow/unused-dev-dependency",
          "level": "warning",
          "message": {
            "text": "Package 'jest' is in devDependencies but never imported"
          },
          "locations": [
            {
              "physicalLocation": {
                "artifactLocation": {
                  "uri": "package.json"
                },
                "region": {
                  "startLine": 12,
                  "startColumn": 1
                }
              }
            }
          ],
          "partialFingerprints": {
            "tools.plow.fingerprint/v1": "912606e2bd61f774",
            "primaryLocationLineHash/v1": "912606e2bd61f774"
          }
        }
      ]
    }
  ]
}
